--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>Employee</artifactId>
+    <artifactId>employee</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>Employee</name>
-    <description>Employee</description>
+    <name>employee</name>
+    <description>employee</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
