--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-spring.datasource.master.jdbc-url=jdbc:sqlserver://127.0.0.1:1433;DatabaseName=land_db
-spring.datasource.master.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.master.username=root
-
-
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/employee?characterEncoding=utf-8&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=123456
