--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,7 @@ spring:
     url: jdbc:mysql://localhost:3306/employee?serverTimezone=GMT%2b8
     username: root
     password: 123456
+
+#mybatis:
+#  configuration:
+#    map-underscore-to-camel-case:true
