--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,4 +7,4 @@ spring:
 
   mvc:
     pathmatch:
-      matching-strategy=ant-path-matcher: ANT_PATH_MATCHER
+      matching-strategy: ant-path-matcher
