--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,11 +4,11 @@ spring:
     url: jdbc:mysql://localhost:3306/employee?serverTimezone=GMT%2b8
     username: root
     password: 123456
-
   mvc:
     pathmatch:
       matching-strategy: ant-path-matcher
 
 mybatis:
+  mapper-locations: classpath:mapper/*.xml
   configuration:
-    map-underscore-to-camel-case:true
+    map-underscore-to-camel-case: true
