--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,4 +12,4 @@ mybatis:
   mapper-locations: classpath:mapper/*.xml
   configuration:
     map-underscore-to-camel-case: true
-  config-location: classpath:mybatis-config.xml
+    # config-location: classpath:mybatis-config.xml
