--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,10 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant-path-matcher
+  redis:
+    port: 6379
+    host: localhost
+    database: 0
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
