fix pageHelper bug

--- a/pom.xml
+++ b/pom.xml
@@ -125,9 +125,10 @@
 
         <dependency>
             <groupId>com.github.pagehelper</groupId>
-            <artifactId>pagehelper</artifactId>
-            <version>5.2.0</version>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.4.7</version>
         </dependency>
+
 
         <dependency>
             <groupId>commons-beanutils</groupId>
