--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,10 @@ spring:
     port: 6379
     host: localhost
     database: 0
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    default-property-inclusion: non_empty
+    time-zone: Asia/Shanghai
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
@@ -18,8 +22,3 @@ mybatis:
     map-underscore-to-camel-case: true
   # config-location: classpath:mybatis-config.xml
 
-pagehelper:
-  helperDialect: mysql
-  supportMethodsArguments: true
-  params: count=countSql
-  returnPageInfo: check
