--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,8 +17,9 @@ spring:
     time-zone: Asia/Shanghai
 
 mybatis:
-  mapper-locations: classpath:mapper/*.xml
-  configuration:
-    map-underscore-to-camel-case: true
-  # config-location: classpath:mybatis-config.xml
+#  mapper-locations: classpath:mapper/*.xml
+#  configuration:
+#    map-underscore-to-camel-case: true
+#    log-impl: org.apache.ibatis.logging.slf4j.Slf4jImpl
+  config-location: classpath:mybatis-config.xml
 
