--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,3 +23,6 @@ mybatis:
 #    log-impl: org.apache.ibatis.logging.slf4j.Slf4jImpl
   config-location: classpath:mybatis-config.xml
 
+logging:
+  config: classpath:log4j2.yml
+
