--- a/service/service-attendance/src/main/resources/application.yml
+++ b/service/service-attendance/src/main/resources/application.yml
@@ -30,3 +30,15 @@ mybatis:
 
 logging:
   config: classpath:log4j2.yml
+  level:
+    # feign 日志以什么级别监控哪个接口
+    com.example.employee.client.EmployeeFeignClient: debug
+
+eureka:
+  client:
+    #表示是否将自己注册进EurekaServer默认为true
+    register-with-eureka: true
+    #是否从EurekaServer抓取已有的注册消息，默认为true，单节点无所谓，集群必须设置为true才能配合ribbon使用负载均衡
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8080/eureka/
