--- a/service/service-attendance/src/main/resources/application.yml
+++ b/service/service-attendance/src/main/resources/application.yml
@@ -34,11 +34,12 @@ logging:
     # feign 日志以什么级别监控哪个接口
     com.example.employee.client.EmployeeFeignClient: debug
 
+# 配置 Eureka Server 注册中心
 eureka:
+  instance:
+    hostname: localhost # 主机名，不配置的时候将根据操作系统的主机名来获取
   client:
-    #表示是否将自己注册进EurekaServer默认为true
-    register-with-eureka: true
-    #是否从EurekaServer抓取已有的注册消息，默认为true，单节点无所谓，集群必须设置为true才能配合ribbon使用负载均衡
-    fetch-registry: true
-    service-url:
-      defaultZone: http://localhost:8080/eureka/
+    register-with-eureka: false # 是否将自己注册到注册中心，默认为 true
+    fetch-registry: false # 是否从注册中心获取服务注册信息，默认为 true
+    service-url: # 注册中心对外暴露的注册地址
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
