--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <redis.version>2.6.3</redis.version>
         <pagehelper.version>1.4.7</pagehelper.version>
         <cloud.version>2021.0.7</cloud.version>
+        <rocketmq.version>4.9.6</rocketmq.version>
     </properties>
 
     <dependencyManagement>
@@ -63,7 +64,11 @@
 <!--            </dependency>-->
 
 
-
+            <dependency>
+                <groupId>org.apache.rocketmq</groupId>
+                <artifactId>rocketmq-spring-boot-starter</artifactId>
+                <version>${rocketmq.version}</version>
+            </dependency>
 
             <!--解决返回视图层406错误的jar包 start-->
             <dependency>
@@ -180,6 +185,12 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>easyexcel</artifactId>
                 <version>${easyexcel.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.rocketmq</groupId>
+                <artifactId>rocketmq-client</artifactId>
+                <version>${rocketmq.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
