--- a/common/pom.xml
+++ b/common/pom.xml
@@ -65,6 +65,11 @@
             <artifactId>rocketmq-client</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-gson</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
