--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,8 @@
         <cloud.version>2021.0.7</cloud.version>
         <rocketmq.version>4.9.6</rocketmq.version>
         <feign.version>12.4</feign.version>
+        <spring-retry.version>1.3.4</spring-retry.version>
+        <aspectj.version>1.9.7</aspectj.version>
     </properties>
 
     <dependencyManagement>
@@ -198,6 +200,18 @@
                 <groupId>io.github.openfeign</groupId>
                 <artifactId>feign-gson</artifactId>
                 <version>${feign.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.retry</groupId>
+                <artifactId>spring-retry</artifactId>
+                <version>${spring-retry.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjweaver</artifactId>
+                <version>${aspectj.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
