--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <feign.version>12.4</feign.version>
         <spring-retry.version>1.3.4</spring-retry.version>
         <aspectj.version>1.9.7</aspectj.version>
+        <rocketmq-starter.version>2.2.2</rocketmq-starter.version>
     </properties>
 
     <dependencyManagement>
@@ -65,13 +66,6 @@
 <!--                <artifactId>junit-jupiter</artifactId>-->
 <!--                <version>5.8.2</version>-->
 <!--            </dependency>-->
-
-
-            <dependency>
-                <groupId>org.apache.rocketmq</groupId>
-                <artifactId>rocketmq-spring-boot-starter</artifactId>
-                <version>${rocketmq.version}</version>
-            </dependency>
 
             <!--解决返回视图层406错误的jar包 start-->
             <dependency>
@@ -190,10 +184,16 @@
                 <version>${easyexcel.version}</version>
             </dependency>
 
+<!--            <dependency>-->
+<!--                <groupId>org.apache.rocketmq</groupId>-->
+<!--                <artifactId>rocketmq-client</artifactId>-->
+<!--                <version>${rocketmq.version}</version>-->
+<!--            </dependency>-->
+
             <dependency>
                 <groupId>org.apache.rocketmq</groupId>
-                <artifactId>rocketmq-client</artifactId>
-                <version>${rocketmq.version}</version>
+                <artifactId>rocketmq-spring-boot-starter</artifactId>
+                <version>${rocketmq-starter.version}</version>
             </dependency>
 
             <dependency>
